@@ -30,8 +30,9 @@ Version 4.1.0a
 * gtags: the -i option also locate tag files among cadedite directories.
 * global, gtags: make icase_path allways enable in Windows32 environment.
 * global: the -T(--through) option added.
-* global: the -C(--ignore-case) option added. '-i' would be better but the
-  option is already used for other purpose.
+* global: rename the -i(incremental) option to -u(update) and the new
+  -i(--ignore-case) option added. Sorry for my incompatible change from
+  the older version. But I believe it should be so.
 
 Version 4.0.1 - September 26, 2000, by Shigio Yamaguchi
 
